fix: add white-space: nowrap to dropdown menu item

--- a/packages/design-system/src/css/dropdown.scss
+++ b/packages/design-system/src/css/dropdown.scss
@@ -84,7 +84,6 @@
 	box-shadow: var.$dropdown-menu-box-shadow;
 	position: relative;
 	list-style: none;
-	min-width: 180px;
 
 	@include mixins.e(item) {
 		list-style: none;
@@ -96,6 +95,7 @@
 		color: var(--color-text-dark);
 		cursor: pointer;
 		outline: none;
+		white-space: nowrap;
 		&:not(.is-disabled):hover,
 		&:focus {
 			background-color: var.$dropdown-menuItem-hover-fill;
